# wopr

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  bootstrap  bootstrap.sh  codemeta.json  config.h.in  configure.ac  configure.in
doc/: Makefile.am  acronyms.tex  defs.tex  pbstyle.sty  tikzdefs.tex  woprdoc.tex
etc/: Makefile.am  acc_gt.pl  calc_wex_pplx.bash  check_spelerr.pl  check_spelerr3.pl  combine2.pl  compare_mg_px.pl  compare_ngd.pl  compare_ngp_srilm.pl  compare_ngt_srilm.pl  compare_ngt_srilm_m.pl  compare_px_srilm.pl  compare_px_srilm_m.pl  compare_pxs_srilm.pl  confusion.pl  create_algo_plots.sh  create_cg_f_scatterplot.pl  create_plots.sh  create_px_scatterplot.pl  create_pxs_scatterplot.pl  create_wex_plots.sh  cstats.pl  data2latex.pl  data_pdt2_2latex.pl  data_pdt2_extract.pl  data_pdt_2latex.pl  do_algos.sh  do_algos.wopr_script  do_all_mg.sh  do_compare_mg_px.script  do_lcontext.wopr_script  do_pdt2.wopr_script  do_pplxs.sh  do_pplxs.wopr_script  do_weps.sh  dti_spelerr.pl  examine_errs1.py  examine_mc.pl  examine_md.pl  examine_mg.pl  (+38 more)
include/: Makefile.am
include/wopr/: Classifier.h  Config.h  Context.h  Expert.h  Makefile.am  MersenneTwister.h  Multi.h  PDT.h  SocketBasics.h  cache.h  elements.h  focus.h  general_test.h  generator.h  lcontext.h  levenshtein.h  ngram_elements.h  ngram_server.h  ngrams.h  prededit.h  qlog.h  runrunrun.h  server.h  tag.h  tinyxml.h  tr.h  util.h  wex.h
m4/: Makefile.am
man/: Makefile.am  wopr.1
src/: Classifier.cc  Classifier.h  Config.cc  Config.h  Context.cc  Context.h  Expert.h  Makefile.am  Multi.h  PDT.h  SocketBasics.cc  SocketBasics.h  cache.h  elements.cc  elements.h  focus.cc  focus.h  general_test.cc  general_test.h  generator.cc  generator.h  lcontext.cc  lcontext.h  levenshtein.cc  levenshtein.h  main.cc  ngram_elements.h  ngram_server.cc  ngram_server.h  ngrams.cc  ngrams.h  prededit.cc  prededit.h  qlog.cc  qlog.h  runrunrun.cc  runrunrun.h  server.cc  server.h  tag.cc  (+14 more)
stimpy/: Makefile.am  confusedata.py  dir_to_tspy.bash  multi.py  run_exps.bash  stimpy.py
web/: Makefile.am  index.html  timbl.php  wopr.css
web/compoli/: Makefile.am  README.txt  add_txt.php  db.php  index.html  initdb.php  submitted.sqll  wopr.php
web/generator/: Makefile.am  generator.css  generator.php  generator.script  index.html
web/generator/js/: Makefile.am  generator.js
web/images/: Makefile.am
web/js/: Makefile.am
web/pdt/: Makefile.am  index.html  wopr.php
web/wopr/: Makefile.am  index.html  preps.html  preps.list  wopr.php
web/wopr/css/: Makefile.am  wopr.css
web/wopr/js/: Makefile.am
