# $Id: Makefile.am 15165 2012-09-10 10:45:40Z sloot $
# $URL: https://ilk.uvt.nl/svn/sources/tscan/trunk/docs/Makefile.am $

EXTRA_DIST = \
	acc_gt.pl \
	check_spelerr.pl \
	combine2.pl \
	compare_mg_px.pl \
	compare_ngp_srilm.pl \
	compare_ngt_srilm.pl \
	compare_ngt_srilm_m.pl \
	compare_px_srilm.pl \
	compare_px_srilm_m.pl \
	compare_pxs_srilm.pl \
	confusion.pl \
	create_cg_f_scatterplot.pl \
	create_px_scatterplot.pl \
	create_pxs_scatterplot.pl \
	cstats.pl \
	data2latex.pl \
	data_pdt2_2latex.pl \
	data_pdt2_extract.pl \
	data_pdt_2latex.pl \
	dti_spelerr.pl \
	examine_mc.pl \
	examine_md.pl \
	examine_mg.pl \
	examine_px.pl \
	examine_px_cg.pl \
	examine_pxs.pl \
	examine_srilm.pl \
	extract_mg_px.pl \
	extract_px_px.pl \
	filter_kvs.pl \
	fix_pdt2.pl \
	graph_wplex.pl \
	make_spelerr.pl \
	pplx_ngt.pl \
	pplx_px.pl \
	pxs2svg.pl \
	create_algo_plots.sh \
	create_plots.sh \
	create_wex_plots.sh \
	do_algos.sh \
	do_all_mg.sh \
	do_pplxs.sh \
	do_weps.sh \
	watch_all.sh \
	watch_ceto.sh \
	watch_wopr.sh \
	ld.py \
	post_correct.py \
	ps_wopr.py \
	tok.py \
	tree2graph.py \
	do_algos.wopr_script \
	do_compare_mg_px.script \
	do_lcontext.wopr_script \
	do_pdt2.wopr_script \
	do_pplxs.wopr_script \
	generator.script \
	make_data.script \
	make_ibase.script \
	nscript \
	script \
	wep.wopr_script
