AM_CPPFLAGS = -I@top_srcdir@/include
AM_CXXFLAGS = -std=c++11 -O3 -Wall

bin_PROGRAMS = wopr

wopr_SOURCES = Classifier.cc \
	generator.cc \
	prededit.cc \
	tinyxml.cpp \
	wex.cc \
	Config.cc \
	lcontext.cc \
        qlog.cc \
        tinyxmlerror.cpp \
	Context.cc \
	levenshtein.cc \
	runrunrun.cc \
	tinyxmlparser.cpp \
	elements.cc \
	main.cc \
	server.cc \
	tr.cc \
	focus.cc \
	ngrams.cc \
	util.cc \
	general_test.cc \
	ngram_server.cc \
	tag.cc \
        watcher.cc
