#  $Id$
#  $URL$

pkginclude_HEADERS = cache.h \
	focus.h \
	Multi.h \
	qlog.h  \
	tr.h \
	Classifier.h  \
	general_test.h \
	ngram_elements.h \
	runrunrun.h \
	util.h \
	Config.h \
	generator.h \
	ngram_server.h \
	server.h \
	watcher.h \
	Context.h \
	lcontext.h \
	ngrams.h \
	SocketBasics.h \
	wex.h \
	elements.h \
	levenshtein.h \
	PDT.h \
	tag.h \
	Expert.h \
	MersenneTwister.h \
	prededit.h \
	tinyxml.h
